# diffsinger-onnx-infer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nuget_packages.txt
docs/: BUILD.md
libs/: CMakeLists.txt
scripts/: download_nuget.bat  download_nuget.ps1
scripts/NuGet/cpu/: packages.config
scripts/nuget_config/directml/: packages.config
scripts/nuget_config/gpu/: packages.config
src/: ArrayUtil.hpp  CMakeLists.txt  DsCommon.h  DsConfig.cpp  DsConfig.h  DsProject.cpp  DsProject.h  Inference.cpp  Inference.h  InferenceFlags.h  ModelData.h  PowerManagement.cpp  PowerManagement.h  Preprocess.cpp  Preprocess.h  SampleCurve.cpp  SampleCurve.h  SpeakerEmbed.cpp  SpeakerEmbed.h  TString.cpp  TString.h  main.cpp
src/Inference/: AcousticInference.cpp  AcousticInference.h  AcousticModelFlags.h  Inference.cpp  Inference.h  InferenceUtils.hpp  LinguisticInference.cpp  LinguisticInference.h  PhonemeDurInference.cpp  PhonemeDurInference.h  PitchInference.cpp  PitchInference.h  VarianceInference.cpp  VarianceInference.h  VocoderInference.cpp  VocoderInference.h
